fix(test): replace Stream.toList() with Collectors.toList() in Java tests
Stream.toList() requires Java 16+; project targets Java 11.
CI was running on Java 11 and failing to compile the test file.

https://claude.ai/code/session_01NBB63zkwh5YRR4ibi1bHFZ